namespace java.swift com.facebook.presto.common.experimental.auto_gen
namespace cpp protocol


struct ThriftConnectorMetadataUpdateHandle {
  1: string type;
  2: binary serializedMetadataUpdateHandle;
}